--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "echarts": "^4.0.0",
     "element-ui": "2.0.8",
     "highcharts": "^6.0.4",
+    "jquery": "^3.3.1",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
