--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "dependencies": {
     "axios": "0.17.1",
     "element-ui": "2.0.8",
+    "file-saver": "^1.3.3",
     "highcharts": "^6.0.4",
     "jquery": "^3.3.1",
     "js-cookie": "2.2.0",
     "js-md5": "^0.7.3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "screenfull": "^3.3.2",
     "vue": "2.5.10",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "xlsx": "^0.12.5"
   },
   "devDependencies": {
     "autoprefixer": "7.2.3",
@@ -57,6 +60,7 @@
     "postcss-loader": "2.0.9",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
+    "script-loader": "^0.7.2",
     "semver": "5.4.1",
     "shelljs": "0.7.8",
     "svg-sprite-loader": "3.5.2",
